--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "css-loader": "3.2.0",
     "html-webpack-plugin": "4.0.0-beta.8",
+    "mini-css-extract-plugin": "0.8.0",
     "react-dev-utils": "9.1.0",
     "style-loader": "1.0.0",
     "webpack": "4.41.2",
